# Bunget

./: CmakeLists.txt  Info.plist  README.md
src/: main.cpp
src/DataStorage/: FileManager.cpp  FileManager.h  FileSaver.cpp  FileSaver.h
src/Financial/: CMakeLists.txt  ExpenseCategory.cpp  ExpenseCategory.h  FinancialManager.cpp  FinancialManager.h  Transaction.cpp  Transaction.h  TransactionCollection.cpp  TransactionCollection.h
src/GUI/: CMakeLists.txt  Page_Expenses.cpp  Page_Expenses.h  Page_Expenses.ui  Page_Home.cpp  Page_Home.h  Page_Home.ui  TransactionItemModel.cpp  TransactionItemModel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
